<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/>
    </parent>

    <groupId>com.dak</groupId>
    <artifactId>spravel</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>spravel</name>
    <description>Spravel — Spring Boot + Vue.js Starter Kit</description>

    <properties>
        <java.version>21</java.version>
        <frontend.dir>${project.basedir}/frontend</frontend.dir>
        <pnpm.cmd>npx -y pnpm</pnpm.cmd>
    </properties>

    <!-- Dependencies                                                       -->
    <dependencies>
        <!-- Spring Boot Starters -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- OpenAPI / Swagger -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.8.8</version>
        </dependency>

        <!-- JWT -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt</artifactId>
            <version>0.12.6</version>
        </dependency>

        <!-- JSON -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20250107</version>
        </dependency>

        <!-- Caffeine Cache -->
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <scope>provided</scope>
        </dependency>

        <!-- PostgreSQL -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- Build                                                              -->
    <build>
        <plugins>
            <!-- Spring Boot Maven Plugin -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- Lombok annotation processing -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.38</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- Frontend Tasks (pnpm via exec-maven-plugin)                  -->
            <!--                                                              -->
            <!-- Usage:                                                       -->
            <!--   ./mvnw frontend:install   — pnpm install                   -->
            <!--   ./mvnw frontend:build     — pnpm run build                 -->
            <!--   ./mvnw frontend:dev       — pnpm run dev (Vite HMR)        -->
            <!--   ./mvnw frontend:clean     — hapus static/assets & index    -->
            <!--   ./mvnw backend:dev        — spring-boot:run                -->
            <!--   ./mvnw backend:build      — package (JAR)                  -->
            <!--   ./mvnw backend:test       — test                           -->
            <!--   ./mvnw backend:clean      — clean                          -->
            <!--   ./mvnw full:build         — frontend + backend JAR         -->
            <!--   ./mvnw full:clean         — clean everything               -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <!-- pnpm install — runs during 'generate-resources' phase -->
                    <execution>
                        <id>frontend-install</id>
                        <phase>generate-resources</phase>
                        <goals><goal>exec</goal></goals>
                        <configuration>
                            <executable>sh</executable>
                            <workingDirectory>${frontend.dir}</workingDirectory>
                            <arguments>
                                <argument>-c</argument>
                                <argument>${pnpm.cmd} install --frozen-lockfile</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <!-- pnpm build — runs during 'generate-resources' phase -->
                    <execution>
                        <id>frontend-build</id>
                        <phase>generate-resources</phase>
                        <goals><goal>exec</goal></goals>
                        <configuration>
                            <executable>sh</executable>
                            <workingDirectory>${frontend.dir}</workingDirectory>
                            <arguments>
                                <argument>-c</argument>
                                <argument>${pnpm.cmd} run build</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- Profiles (shortcut commands)                                       -->
    <profiles>
        <!-- Skip frontend build saat develop backend saja -->
        <profile>
            <id>skip-frontend</id>
            <properties>
                <exec.skip>true</exec.skip>
            </properties>
        </profile>
    </profiles>
</project>
